distribution working